...
<resources>
    <string name="money">$%s</string>
    <string name="text_date_delimiter">" - "</string>
    <string name="text_subject">Production Defect Report</string>

    <string name="error_unknown">We are experiencing technical difficulties</string>
    <string name="network_error">Something went wrong. Please check network connection.</string>
    <string name="location_timeout_error">Unable to identify your location.</string>
    <string name="error_generic">Something went wrong.</string>
    <string name="send_message_msg">Your message has been sent</string>
    <string name="send_message_title">Success</string>
    <string name="send_message_fail">Your message has failed</string>
    <string name="empty_message_error">Message can\'t be empty</string>
...
    <string name="general_server_comunication_error">We experienced error during server communication, do you want to retry?</string>

    <string name="missing_tnc_card_photo_warning">Please upload %s photo to continue</string>
    <string name="missing_tnc_card_expiration_date_warning">Please choose valid expiration date to continue</string>

    <string name="loading">Loading…</string>
    <string name="you_have_arrived_to_pickup_location">You have arrived to pickup location</string>

    <string name="fb_email_error">Please allow to use your email in order to complete registration</string>
    <string name="fb_login_error">We are unable to access your email associated with Facebook.\nPlease check your permissions for %1$s and/or create a %1$s account using your email</string>
    <string name="first_name_must_be">First name must be at least %d characters</string>
    <string name="middle_name_must_be">Middle name must be at least %d characters or confirm you do not have a middle name</string>
    <string name="confirm_middle_name">Please confirm you do not have a middle name</string>
...
    <string name="field_required">This field is required.</string>

    <!-- edit picture -->
    <string name="edit_picture">Edit Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose From Library</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_photo">Please select photo</string>
    <string name="enter_value">Enter value</string>
    <string name="ride_upgrade_msg">Do you confirm an upgrade from: %1$s to: %2$s class?</string>
    <string name="my_location">My Location</string>

    <!-- ride upgrade -->
...
    <string name="surge_disabled_fialog_msg">Surge has been disabled. Do you want to request ride?</string>


    <string name="nickname_hint">Nickname</string>
    <string name="rider_marker_title">Rider Position</string>
    <string name="arrive_not_allowed_dialog_msg">You may tap arrive when you are %d meters close to pickup location</string>
    <string name="starting_trip_confirmation_dialog_msg">Are you sure you want to start the trip?</string>
    <string name="ending_trip_confirmation_dialog_msg">Are you sure you want to end the trip?</string>
    <string name="finish_ride_notification_msg">Congratulations on arriving to the destination. End trip?</string>
    <string name="direct_connect_menu">Direct Connect</string>
    <string name="direct_connect_change_id_confirmation">Are you sure you want to change you ID?</string>

    <string name="verify_email_title">Verify your Email</string>
...
