...
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/map.rate.rate_rider"
            android:textColor="@color/divider" />

        <com.rideaustin.ui.widgets.CustomRatingBar
            android:id="@+id/rb_rate_driver"
            style="@style/Base.Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/ratingbar_margin_bottom"
            android:layout_marginTop="@dimen/ratingbar_margin_top"
...
